# qa-assistant-svn

branches/0.4/: configure.ac  optionrenderer.py
fedora-rpmdevtools/trunk/: PREFERENCES  SRPM.py  TODO  checklist.py  fedora-md5  fedora-qareviewer  fedora-qatemplate  optionrenderer.py  qareviewer.py  review.py
fedora-rpmdevtools/trunk/data/: checklist.dtd  fedoraus.xml
fedora-rpmdevtools/trunk/glade/: fedora-qareviewer.glade  fedora-qareviewer.gladep  fedora-qareviewer.strings  qa-assistant.glade  qa-assistant.gladep  qa-assistant.strings
fedora-rpmdevtools/trunk/pixmaps/: qa-icon.xcf
qa-assistant/branches/0.4/: ChangeLog  NEWS  PREFERENCES  checklist.py  gnomeglade.py  qareviewer.py  review.py
qa-assistant/branches/41editbug/: ChangeLog  SRPM.py  properties.py  qareviewer.py  treetips.py
qa-assistant/branches/41editbug/glade/: qa-assistant.glade
qa-assistant/branches/savefile/: NEWS  SRPM.py  TODO  checklist.py  properties.py  qa-assistant.spec.in  qareviewer.py  savefile.py  treetips.py
qa-assistant/branches/savefile/data/: checklist.dtd
qa-assistant/tags/0.3/: Makefile.am  TODO  autogen.sh  qareviewer.py  srpmqa.py  treetips.py
qa-assistant/tags/0.3/data/: checklist.dtd
qa-assistant/tags/0.3/glade/: qa-assistant.glade
qa-assistant/tags/0.4/: AUTHORS  ChangeLog  README  configure.ac
qa-assistant/tags/0.4.1/: paths.py.pyin  savefile.py
qa-assistant/tags/0.4.90.1/: Makefile.am  PREFERENCES  TODO  qa-assistant.spec.in
qa-assistant/tags/0.4.90.1/data/: sample-save.xml
qa-assistant/tags/0.4.90.1/src/: checkview.py
qa-assistant/tags/0.4.90.2/: BUGS  TODO  autogen.sh  qa-assistant.spec.in
qa-assistant/tags/0.4.90.2/src/: checklist.py  error.py  gnomeglade.py  preferences.py  qareviewer.py
qa-assistant/tags/0.4.90.2/tests/: test.py  testtreetips.py
qa-assistant/tags/0.4.90.3/: BUGS  Makefile.am  PREFERENCES  README  configure.ac
qa-assistant/tags/0.4.90.3/data/: minimal-valid.xml
qa-assistant/tags/0.4.90.3/src/: qa-assistant.pyin  qaconst.py.in  review.py  treetips.py
qa-assistant/tags/0.4.90.3/tests/: treetipstest.py
qa-assistant/tags/0.4/glade/: qa-assistant.glade
qa-assistant/trunk/: AUTHORS  BUGS  ChangeLog  Makefile.am  NEWS  PREFERENCES  README  SRPM.py  TODO  autogen.sh  checklist.py  checkload.py  checkview.py  configure.ac  error.py  genericqa.py  gnomeglade.py  optionrenderer.py  properties.py  qa-assistant  qa-assistant.desktop.in  qa-assistant.pyin  qa-assistant.schemas  qa-assistant.spec.in  qaconvert.py  qareviewer.py  review.py  savefile.py  srpmqa.py  treetips.py
qa-assistant/trunk/data/: checklist.dtd  fedoraus.py  fedoraus.xml  minimal-valid.xml  qasave.dtd  sample-save.xml  softwarerelease.xml
qa-assistant/trunk/glade/: qa-assistant.glade  qa-assistant.strings
qa-assistant/trunk/src/: Makefile.am  SRPM.py  checklist.py  checkload.py  checkview.py  error.py  functions.py  gnomeglade.py  gpg.py  preferences.py  properties.py  propview.py  qa-assistant.pyin.in  qa-convert.pyin  qaapp.py  qaglobals.py.in  qareviewer.py  review.py  srpmqa.py  ui.py
qa-assistant/trunk/tests/: Makefile.am  checklisttest.py  creationtest.py  propertiestest.py  test.py  testchecklist.py  testcreation.py  testtreetips.py  treetipstest.py
tags/0.2/: AUTHORS  ChangeLog  checklist.py  qa-assistant  qareviewer.py
tags/0.2/data/: checklist.dtd  fedoraus.xml
tags/0.2/glade/: qa-assistant.glade
tags/0.3/: NEWS  README  gnomeglade.py  properties.py  qa-assistant.spec.in  review.py
tags/0.4/: Makefile.am  checklist.py  genericqa.py  qareviewer.py
tags/0.4.1/: Makefile.am  SRPM.py  qa-assistant.spec.in  qareviewer.py
tags/0.4.90.1/: BUGS  NEWS  README  configure.ac  qa-assistant.desktop.in
tags/0.4.90.1/data/: softwarerelease.xml
tags/0.4.90.1/glade/: qa-assistant.strings
tags/0.4.90.1/src/: Makefile.am  qareviewer.py
tags/0.4.90.1/tests/: testchecklist.py  testcreation.py
tags/0.4.90.2/: ChangeLog
tags/0.4.90.2/data/: fedoraus.xml
tags/0.4.90.2/glade/: qa-assistant.glade
tags/0.4.90.2/src/: Makefile.am  checkload.py  checkview.py  genericqa.py  gpg.py  optionrenderer.py  properties.py
tags/0.4.90.3/: TODO
tags/0.4.90.3/glade/: qa-assistant.strings
tags/0.4.90.3/src/: Makefile.am  checkload.py  error.py  preferences.py  properties.py  qa-convert.pyin
tags/0.4.90.3/tests/: creationtest.py  propertiestest.py
tags/0.4.90.4/: BUGS  ChangeLog  NEWS  qa-assistant.spec.in
tags/0.4.90.4/data/: fedoraus.py
tags/0.4.90.4/src/: functions.py  properties.py  qa-convert.pyin.in  qareviewer.py  review.py
tags/0.4.90.4/tests/: creationtest.py
tags/0.4.90.5/: AUTHORS  ChangeLog  NEWS  ROADMAP  TODO
tags/0.4.90.5/data/: checklist.dtd  qasave.dtd  softwarerelease.xml
tags/0.4.90.5/src/: Makefile.am  SRPM.py  preferences.py  treetips.py
tags/0.4.90.5/tests/: propertiestest.py  qaconverttest.py  test.py
tags/0.4.90.5/tests/qasave-0.1/: ddclient.save
tags/0.4/data/: checklist.dtd
tags/0.4/glade/: qa-assistant.strings
trunk/: BUGS  ChangeLog  Makefile.am  PREFERENCES  README  ROADMAP  TODO  configure.ac  gen-hash.py  qa-assistant.desktop.in  qa-assistant.spec.in
trunk/data/: checklist.dtd  fedoraus.py  fedoraus.xml
trunk/glade/: qa-assistant.glade  qa-assistant.strings
trunk/src/: Makefile.am  checklist.py  checkload.py  functions.py  gpg.py  optionrenderer.py  preferences.py  properties.py  propview.py  qa-assistant.pyin.in  qa-convert.pyin.in  qaglobals.py.in  qareviewer.py  review.py  srpmqa.py  ui.py
trunk/tests/: Makefile.am  checklisttest.py  qaconverttest.py  test.py
trunk/tests/qasave-0.1/: customitems.save  pyrex.save  python-docutils.save
