# Author: Toshio Kuratomi <toshio@tiki-lounge.com>
# Date: 24 September 2004
# $Id$

TESTS =	checklisttest.py \
	creationtest.py \
	propertiestest.py \
	treetipstest.py
EXTRA_DIST =	test.py \
		checklisttest.py \
		creationtest.py \
		propertiestest.py \
		treetipstest.py
CLEANFILES = \
	     *.pyc \
	     *.pyo
