# Author: Toshio Kuratomi <toshio@tiki-lounge.com>
# Date: 24 September 2004
# $Id$

datafiles = qasave-0.1/*
TESTS =	checklisttest.py \
	creationtest.py \
	propertiestest.py \
	treetipstest.py \
	qaconverttest.py
EXTRA_DIST =	test.py \
		checklisttest.py \
		creationtest.py \
		propertiestest.py \
		treetipstest.py \
		qaconverttest.py \
		$(datafiles)
CLEANFILES = \
	     *.pyc \
	     *.pyo
