# Author: Toshio Kuratomi <toshio@tiki-lounge.com>
# Date: 24 September 2004
# $Id$

#TESTS = test.py
TESTS = propertiestest.py \
	testcreation.py \
	testtreetips.py \
	testchecklist.py 
EXTRA_DIST = propertiestest.py \
	     test.py \
	     testchecklist.py \
	     testtreetips.py \
	     testcreation.py
CLEANFILES = \
	     *.pyc \
	     *.pyo
